# TechnicalChallenge

./: .gitignore  README.md  TechnicalChallenge.odt  run.sh  setup.sh
Tools/: blockchain_logger.py  blockchain_reader.py  extract_blockchain_data.py  vizualization.py  web3test.py
docs/: TechnicalChallenge.txt  blockchain.md  contribution.md  report.md  setup.md  simulation.md  waypoint_follower.md
src/follow_waypoints_pkg/: package.xml  setup.cfg  setup.py
src/follow_waypoints_pkg/follow_waypoints_pkg/: go_through_poses.py  gps_follower.py  odom_follower.py
src/follow_waypoints_pkg/resource/: gps_waypoints.csv  odom_waypoints.csv
src/sdnt_robot_description/: CMakeLists.txt  package.xml
src/sdnt_robot_description/config/: ekf.yaml  nav2_params.yaml
src/sdnt_robot_description/launch/: display.launch.py  tb3.launch.py
src/sdnt_robot_description/maps/: warehouse.yaml
src/sdnt_robot_description/rviz/: display.rviz
src/sdnt_robot_description/src/description/: sdnt_robot_description.urdf
src/sdnt_robot_description/world/: warehouse.world
src/sdnt_robot_simulation/: CMakeLists.txt  package.xml
src/sdnt_robot_simulation/launch/: simulation.launch.py  tb3.launch.py
src/sdnt_robot_simulation/maps/: warehouse_map.pgm
src/sdnt_robot_simulation/src/description/: sdnt_robot_description.urdf
